feat: add home screen to choose between dlc and pertes
